--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
-    "autoprefixer": "^10",
     "core-js": "^3.8.3",
-    "postcss": "^8",
+    "flowbite": "^1.5.3",
     "tailwindcss": "^3",
     "vue": "^3.2.13"
   },
@@ -22,8 +21,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.17",
     "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
