--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
+    "@iconify/vue": "^4.0.0",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
     "tailwindcss": "^3",
