--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "flowbite": "^1.5.3",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
