--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
+    "@iconify/vue": "^4.0.0",
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
