--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
+    "flowbite-vue": "^0.0.6",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5"
