--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port = 8080
 server.servlet.context.path = /
 server.error.include-message = always
-logging.level.org.springframework = debug
+logging.level.org.springframework = info
