--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "tailwindcss": "^3",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
     "yarn": "^1.22.19"
@@ -31,7 +34,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.17",
-    "vue-cli-plugin-tailwind": "~3.0.0"
+    "vue-cli-plugin-tailwind": "~3.0.0",
+    "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "eslintConfig": {
     "root": true,
@@ -45,7 +49,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
