--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-vue": "^3.10.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
     "@iconify/vue": "^4.0.0",
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
+    "dateformat": "^5.0.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
     "sass": "^1.55.0",
