--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@daypilot/daypilot-lite-vue": "^3.10.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
@@ -18,11 +17,9 @@
     "dateformat": "^5.0.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
     "tailwindcss": "^3",
-    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
+    "vue-datepicker-next": "^1.0.2",
     "vue-router": "^4.1.5",
     "yarn": "^1.22.19"
   },
