--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.0.11",
     "@iconify/vue": "^4.0.0",
     "animate.css": "^4.1.1",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
