--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@iconify/vue": "^4.0.0",
     "animate.css": "^4.1.1",
     "chart.js": "^3.9.1",
+    "chartist": "^1.3.0",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-chartist": "^3.0.0",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.5",
     "yarn": "^1.22.19"
   },
