all get requests done

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port = 8080
 server.servlet.context-path = /api
 server.error.include-message = always
 logging.level.org.springframework = info
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
