Temporary commit for stand up

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+# configure the H2 data source and console
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+
+# persist the data
+#spring.datasource.url=jdbc:h2:file:./sampledata
+spring.datasource.url=jdbc:h2:mem:helios
+
 server.port = 8080
 server.servlet.context-path = /api
 server.error.include-message = always
