--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,20 @@
     "@heroicons/vue": "^2.0.11",
     "@iconify/vue": "^4.0.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.0",
     "chart.js": "^3.9.1",
     "chartist": "^1.3.0",
     "core-js": "^3.8.3",
     "dateformat": "^5.0.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
-    "vue-datepicker-next": "^1.0.2",
     "vue-chartist": "^3.0.0",
     "vue-chartjs": "^4.1.2",
+    "vue-datepicker-next": "^1.0.2",
     "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
