--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "vue-chartjs": "^4.1.2",
     "vue-datepicker-next": "^1.0.2",
     "vue-router": "^4.1.5",
+    "vue-session": "^1.0.0",
     "vue-toastification": "^2.0.0-rc.5",
     "yarn": "^1.22.19"
   },
