did the following: -changed the way fails work for logging in and registering in the back-end -id's now correctly increment in de database instead of random -changed the request and response models to records -changed how exceptions are handled in the front-end

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 # persist the data
 #spring.datasource.url=jdbc:h2:file:./sampledata
@@ -13,4 +14,4 @@ spring.datasource.url=jdbc:h2:mem:helios
 server.port = 8080
 server.servlet.context-path = /api
 server.error.include-message = always
-logging.level.org.springframework = info
+logging.level.org.springframework = debug
