--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "dateformat": "^5.0.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
+    "jquery": "^3.6.1",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-chartist": "^3.0.0",
