--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.defer-datasource-initialization=true
 
 # turn statistics on
 spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
+logging.level.org.hibernate.stat=info
 
 # show all queries for debugging purposes
 spring.jpa.show-sql=true
