--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.generate-ddl=true
 server.port = 8080
 server.servlet.context-path = /api
 server.error.include-message = always
-logging.level.org.springframework = debug
+logging.level.org.springframework = info
 
 # setting the database - fixed URL (otherwise spring will choose an arbitrary one)
 # note: dialects are auto-detected by hibernate
