--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # used to initialise the db with data (remove this section of you don't have it)
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.data-locations=classpath:/data.sql
+#spring.sql.init.data-locations=classpath:/qwre.sql
 
 # turn statistics on
 spring.jpa.properties.hibernate.generate_statistics=true
