added a email service for clients

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,6 +36,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
+# The hostname of the email server that will be used to send emails.
+spring.mail.host=smtp.gmail.com
+# The port number that will be used to send emails.
+spring.mail.port=587
+# The username that will be used to authenticate with the email server.
+spring.mail.username=florijn.ewa@gmail.com
+# The password that will be used to authenticate with the email server.
+spring.mail.password=tolzgrmtzgfcrgwo
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 # enabling h2 console
 spring.h2.console.enabled=true
 
