--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^3.9.1",
     "chartist": "^1.3.0",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "dateformat": "^5.0.3",
     "flowbite": "^1.5.3",
     "flowbite-vue": "^0.0.6",
