--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,9 +32,9 @@ spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=info
 
 # show all queries for debugging purposes
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.type=false
 
 # The hostname of the email server that will be used to send emails.
 spring.mail.host=smtp.gmail.com
