--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -56,6 +56,6 @@ spring.h2.console.settings.web-allow-others=true
 
 # settings for file handling
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=1GB
-spring.servlet.multipart.max-request-size=1GB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
